Styles.css
/* ... */
.logoHome.more-transparent{
	opacity: 0.4;
	-webkit-transition: all .5s ease 0s;
	-o-transition: all .5s ease 0s;
	transition: all .5s ease 0s;
}
.logoInstagram.more-transparent {
	opacity: 0.4;
	-webkit-transition: all .5s ease 0s;
	-o-transition: all .5s ease 0s;
	transition: all .5s ease 0s;
}
.logoFacebook.more-transparent {
	opacity: 0.4;
	-webkit-transition: all .5s ease 0s;
	-o-transition: all .5s ease 0s;
	transition: all .5s ease 0s;
}
.logoTwitter.more-transparent {
	opacity: 0.4;
	-webkit-transition: all .5s ease 0s;
	-o-transition: all .5s ease 0s;
	transition: all .5s ease 0s;
}
.logoGithub.more-transparent {
	opacity: 0.4;
	-webkit-transition: all .5s ease 0s;
	-o-transition: all .5s ease 0s;
	transition: all .5s ease 0s;
}
.logoSoundcloud.more-transparent {
	opacity: 0.4;
	-webkit-transition: all .5s ease 0s;
	-o-transition: all .5s ease 0s;
	transition: all .5s ease 0s;
}
.logoEmail.more-transparent {
	opacity: 0.4;
	-webkit-transition: all .5s ease 0s;
	-o-transition: all .5s ease 0s;
	transition: all .5s ease 0s;
}
.more-transparent#navAboutId {
	opacity: 0.4;
	-webkit-transition: all .5s ease 0s;
	-o-transition: all .5s ease 0s;
	transition: all .5s ease 0s;
}
.more-transparent#navTechId {
	opacity: 0.4;
	-webkit-transition: all .5s ease 0s;
	-o-transition: all .5s ease 0s;
	transition: all .5s ease 0s;
}
.more-transparent#navMusicId {
	opacity: 0.4;
	-webkit-transition: all .5s ease 0s;
	-o-transition: all .5s ease 0s;
	transition: all .5s ease 0s;
}
.more-transparent#navContactId {
	opacity: 0.4;
	-webkit-transition: all .5s ease 0s;
	-o-transition: all .5s ease 0s;
	transition: all .5s ease 0s;
}

/*-----Big Signature-----*/

img#sigImg {
width: 50%;
position: absolute;
top: 157px;
right: 25%;
-webkit-transition: all 0.5s;
-moz-transition: all 0.5s;
-o-transition: all 0.5s;
transition: all 0.5s;

}

/*-----Small Signature-----*/

img.smaller#sigImg {
	width: 10%;
	position: absolute;
	right: 45%;
	top: -3px;

}






/*---------------------------------- Banner ------------------------------*/
/*
.buttonMusic {
	padding-right: 6px;
	padding-bottom: 6px;
	padding-left: 6px;
	display: inline-block;
	margin-left: 6px;
	margin-right: 6px;
	width: 60px;
	text-align: center;
	color: #FFFFFF;
	text-decoration: none;
	font-weight: 500;
	border: 1px solid #FFFFFF;
	padding-top: 4px;
}*/

.banner-main-image {
	background-repeat: no-repeat;
	max-width: 1145px;
	display: block;
	position: relative;
	z-index: 90;
}

.banner-wrapper {
	min-height: 320px;
	display: block;
	position: relative;
	width: 100%;
}
.main-image {
	max-width: 1145px;
	width: 100%
}

/*------------------------------- Main Content ---------------------------*/

.mainContent {
	display: block;
}
h1 {
	font-family: source-serif-pro;
	font-style: normal;
	font-variant: small-caps;
	font-weight: 400;
	font-size: 2em;
	text-shadow: 0 0px #FFFFFF;
	text-align: center;
}
h2 {
	font-family: source-serif-pro;
	font-style: normal;
	font-weight: 300;
	font-size: 1.5em;
	text-shadow: 0 0px #FFFFFF;
	text-align: center;
	color: rgba(26,26,26,.7);
}
.sectionTop {
	width: 90%;
	margin-left: 5%;
	margin-right: 5%;
}

/*
.sectionRight {
	width: 50%;
	margin-left: 2.5%;
	margin-right: 5%;
	float: right;
	background-color: #FFFFFF;
	border-top: 10px solid #000000;
	border-bottom: 10px solid #000000;
	padding-top: 0px;
	padding-right: 0px;
	padding-bottom: 0px;
	padding-left: 0px;
}
.sectionFull {
	width: 90%;
	margin-left: 2.5%;
	margin-right: 5%;
	float: right;
	background-color: #FFFFFF;
	border-top: 10px solid #000000;
	border-bottom: 10px solid #000000;
	margin-bottom: 5%;
	padding-top: 10px;
	padding-right: 10px;
	padding-bottom: 10px;
	padding-left: 10px;
}
*/

.block-text-center {
	margin-left: auto;
	margin-right: auto;
	text-align: center;
	width: 75%;
	padding-bottom: 70px;
	border-bottom: thin solid rgba(26,26,26,.4);
}
.block-text-center .sectionContent p {
	margin-left: 10%;
	margin-right: 10%;
	margin-top: 0px;
	color: rgba(26,26,26,.7);
}
.section-title-wrapper {
	text-align: center;
}

/* styles for gif images next to headers */

.animated-gif-wrapper {
	display: inline-block;
	position: relative;
	width: 0;
	height: 0;
}
#animated-gif-wrapper-about-me {
	top: 2px;
	right: 105px;
}
#animated-gif-wrapper-tech {
	top: 7px;
}
#animated-gif-wrapper-music {
	top: 1px;
	right: 120px;
}
#animated-gif-wrapper-music-right {
	left: 5px;
	top: 3px;
}
#animated-gif-wrapper-contact {
	top: 5px;
}
.title-wrapper {
	display: inline-block;
}
#a-little-bit {
	height: 20px;
	visibility: hidden;
}
.visibleNow#a-little-bit {
	visibility: visible;
}
#tech-no-log-ic {
	height: 27px;
}
#music-lines {
	height: 25px;
}
#music-lines-right {
	height: 25px;
}
#contact-dots {
	height: 25px;
}
#about-me-title {

}
#tech-title {

}
#music-title {

}

/*-----------------------------Recent Events-------------------------------*/

.recent-events-wrapper2 {
	max-width: 1145px;
	margin: 0 auto;
	display: block;
	position: relative;
}
#recent-events-header{
	margin: 70px auto 33px auto;
}
.recent-events-sq-container {
	max-width: 30%;
	margin: 0 1.333%;
	padding: 0;
	display: inline-block;
}
.recent-events-sq-1, .recent-events-sq-2, .recent-events-sq-3 {
	max-width: 100%;
	-webkit-filter: grayscale(100%);
	-moz-filter: grayscale(100%);
	filter: grayscale(100%);
}
.pictures-container {
	max-width: 1145px;
	padding-top: 80px;
	margin: 0 auto;
	display: block;
	position: relative
}
.pictures-row {
	overflow: auto;
}
.little-pic {
	max-width: 13.4%;
	margin: 0 auto;
	display: inline-block;
}
.insta-pic {
	max-width: 100%;
}

/*----------------------------------Tech----------------------------------*/

.techContent {
	overflow: auto;
}
.tech-article {
	margin-bottom: 30px;
}
.tech-link {
	text-decoration: none;
	color: rgba(26,26,26, 1);
}
.tech-link:hover {
	text-decoration: underline;
}
/* ... */

